# gurba-gen

./: .gitignore  2-b.c  50n80.c  LICENSE  README.md  abot_gen.sh  armor_gen.sh  core_armour.py  core_ashop.py  core_beer.py  core_cftc_gen.sh  core_cftc_npc.sh  core_city_gen.sh  core_city_npc.sh  core_city_park_gen.sh  core_east_housing_gen.sh  core_east_npc.sh  core_kore_gen.sh  core_kore_npc.sh  core_mine_gen.sh  core_north_housing_gen.sh  core_north_housing_npc.sh  core_npc.py  core_nympho_gen.sh  core_nympho_npc.sh  core_pbasement_gen.sh  core_pbasement_gen.sh.save  core_pbasement_npc.sh  core_phase3.txt  core_prison_gen.sh  core_prison_npc.sh  core_room.py  core_transit_desc.py  core_weapon.py  core_weapon.sh  core_wshop.py  directions_gen.txt  dungeon2test.c  dungeontest.c  fix_core.sh  (+19 more)
hash_research/: 110.sha1  README_NOW  hex.py  slice.py  test.txt
kips/: .gitignore  Cargo.toml  README.md  output.txt
kips/data/levels/: 0.level  1.level  2.level  3.level  4.level  5.level  6.level  7.level  8.level  9.level
kips/data/maps/a8/: map.txt
kips/data/maps/h6/: map.txt
kips/data/maps/h8/: map.txt
kips/levels/: 4.level
kips/src/: grid_image.rs  levelparse.rs  levels.rs  main.rs  mapgen.rs
mudmap/: Cargo.toml  README.md
mudmap/levels/: 0.level  1.level  2.level  3.level  5.level  6.level  8.level
mudmap/src/: main.rs
