[package]
edition = "2021"
name = "kips"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.8", features = ["derive", "cargo"]}
color-eyre = "0.6.1"
colorsys = "0.6.6"
glob = "0.3.0"
image = "0.24.2"
